// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResetButton Renders a clickable button 1`] = `
<NavItem
  key="reset-button"
  tag="li"
>
  <div
    className="buttonsBar_6zsntc"
  >
    <FontAwesomeIcon
      border={false}
      className="toolbarButton_1ueb7gu"
      fixedWidth={false}
      flip={null}
      icon={
        Object {
          "icon": Array [
            512,
            512,
            Array [],
            "f049",
            "M0 436V76c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v151.9L235.5 71.4C256.1 54.3 288 68.6 288 96v131.9L459.5 71.4C480.1 54.3 512 68.6 512 96v320c0 27.4-31.9 41.7-52.5 24.6L288 285.3V416c0 27.4-31.9 41.7-52.5 24.6L64 285.3V436c0 6.6-5.4 12-12 12H12c-6.6 0-12-5.4-12-12z",
          ],
          "iconName": "fast-backward",
          "prefix": "fas",
        }
      }
      inverse={false}
      key="toolbar-reset"
      listItem={false}
      mask={null}
      onClick={[MockFunction]}
      pull={null}
      pulse={false}
      rotation={null}
      size={null}
      spin={false}
      symbol={false}
      title="Reset state"
      transform={null}
    />
  </div>
</NavItem>
`;

exports[`ResetButton Renders a spinning icon when reset is in-progress 1`] = `
<NavItem
  key="reset-button"
  tag="li"
>
  <div
    className="buttonsBar_6zsntc"
  >
    <FontAwesomeIcon
      border={false}
      className="toolbarButton_1ueb7gu-o_O-toolbarInactive_51g7gx"
      fixedWidth={false}
      flip={null}
      icon={
        Object {
          "icon": Array [
            512,
            512,
            Array [],
            "f049",
            "M0 436V76c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v151.9L235.5 71.4C256.1 54.3 288 68.6 288 96v131.9L459.5 71.4C480.1 54.3 512 68.6 512 96v320c0 27.4-31.9 41.7-52.5 24.6L288 285.3V416c0 27.4-31.9 41.7-52.5 24.6L64 285.3V436c0 6.6-5.4 12-12 12H12c-6.6 0-12-5.4-12-12z",
          ],
          "iconName": "fast-backward",
          "prefix": "fas",
        }
      }
      inverse={false}
      key="toolbar-reset"
      listItem={false}
      mask={null}
      pull={null}
      pulse={false}
      rotation={null}
      size={null}
      spin={false}
      symbol={false}
      title="Resetting..."
      transform={null}
    />
  </div>
</NavItem>
`;
